rejigged field order

--- a/nbs/01-library-gen.ipynb
+++ b/nbs/01-library-gen.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "edcb581c-8f51-4142-9ed5-55c654dfdbc6",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "110dd4e7-a583-4279-b32d-eb9f53500e3e",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "08c950d9-8794-4402-b66d-435fd0310fbb",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "779f61ca-0c0c-4ad0-af7e-dfcc54602160",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "(19666, 1607)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "54ebcb6a-fc63-4bda-8572-3449a0794b48",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "<div class=\"genre scanme\" id=\"item1\" onclick='playx(\"1Os92edk1L3iu1PNQtgieM\", \"australian classical piano\", this);' preview_url=\"https://p.scdn.co/mp3-preview/ff605ba13e2d6113247040ea1bcc77c33674a1ce\" scan=\"true\" style=\"color: #1ca3c2; top: 19051px; left: 502px; font-size: 100%\" title='e.g. Edvard Grieg \"Lyric Pieces Book I, Op.12: 1. Arietta\"'>australian classical piano<a class=\"navlink\" href=\"engenremap-australianclassicalpiano.html\" onclick=\"event.stopPropagation();\">»</a> </div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d6fa0075-cd2a-49ad-ad5e-f832b2814070",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "645938a8-404b-46a2-8508-503ea78dbe87",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "'australian classical piano'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5a21d672-e739-4842-9f10-8d74d50272b6",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "{'color': '#1ca3c2', 'top': '19051', 'left': '502', 'font-size': '100%'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "5e65fb01-b1a2-4732-a53e-c46747a13137",
    "metadata": {},
    "outputs": [],
@@ -251,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "d92fe15c-4957-44a9-93ab-28382481f4c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1105, 615)"
+       "(502, 615)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,61 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "06293fbe-0a17-48b0-b7d1-c1f650e38836",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#exports\n",
-    "def hex_to_rgb(value):\n",
-    "    if value[0] == '#':\n",
-    "        value = value[1:]\n",
-    "\n",
-    "    len_value = len(value)\n",
-    "\n",
-    "    if len_value not in [3, 6]:\n",
-    "        raise ValueError('Incorect a value hex {}'.format(value))\n",
-    "\n",
-    "    if len_value == 3:\n",
-    "        value = ''.join(i * 2 for i in value)\n",
-    "        \n",
-    "    return tuple(int(i, 16) for i in textwrap.wrap(value, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "f9ba5cc6-8c92-49fb-8c5c-52edac34b8ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(28, 163, 194)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rgb = hex_to_rgb(genre_style_elems['color'])\n",
-    "\n",
-    "rgb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "490ec82f-e235-436d-936c-fc563031b80c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "766778ff-1082-41ab-93c0-c7e504630243",
    "metadata": {},
    "outputs": [],
@@ -348,16 +294,15 @@
     "    genre_style_elems = extract_style_elems(genre_elem)\n",
     "\n",
     "    genre_attrs['genre'] = genre_elem_to_name(genre_elem)\n",
-    "    genre_attrs['hex_colour'] = genre_style_elems['color']\n",
     "    genre_attrs['x'], genre_attrs['y'] = get_genre_xy(genre_style_elems, canvas_width, canvas_height)\n",
-    "    genre_attrs['r'], genre_attrs['g'], genre_attrs['b'] = hex_to_rgb(genre_style_elems['color'])\n",
+    "    genre_attrs['hex_colour'] = genre_style_elems['color']\n",
     "    \n",
     "    return genre_attrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "a8827e4b-1bbc-4dca-8b79-7d1e21f34384",
    "metadata": {},
    "outputs": [
@@ -365,15 +310,12 @@
      "data": {
       "text/plain": [
        "{'genre': 'australian classical piano',\n",
-       " 'hex_colour': '#1ca3c2',\n",
        " 'x': 502,\n",
        " 'y': 615,\n",
-       " 'r': 28,\n",
-       " 'g': 163,\n",
-       " 'b': 194}"
+       " 'hex_colour': '#1ca3c2'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "id": "7cf7aac7-1833-4eaf-adb5-d47eeacd6f6b",
    "metadata": {},
    "outputs": [],
@@ -418,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "044905d9-9dbd-4bbe-a461-c916f722bded",
    "metadata": {},
    "outputs": [
@@ -444,79 +386,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>genre</th>\n",
-       "      <th>hex_colour</th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
-       "      <th>r</th>\n",
-       "      <th>g</th>\n",
-       "      <th>b</th>\n",
+       "      <th>hex_colour</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>australian classical piano</td>\n",
-       "      <td>#1ca3c2</td>\n",
        "      <td>502</td>\n",
        "      <td>615</td>\n",
-       "      <td>28</td>\n",
-       "      <td>163</td>\n",
-       "      <td>194</td>\n",
+       "      <td>#1ca3c2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>piano blues</td>\n",
-       "      <td>#66882d</td>\n",
        "      <td>911</td>\n",
        "      <td>3891</td>\n",
-       "      <td>102</td>\n",
-       "      <td>136</td>\n",
-       "      <td>45</td>\n",
+       "      <td>#66882d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>histoire pour enfants</td>\n",
-       "      <td>#568608</td>\n",
        "      <td>1153</td>\n",
        "      <td>5673</td>\n",
-       "      <td>86</td>\n",
-       "      <td>134</td>\n",
-       "      <td>8</td>\n",
+       "      <td>#568608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>dalarna indie</td>\n",
-       "      <td>#a77e17</td>\n",
        "      <td>401</td>\n",
        "      <td>10634</td>\n",
-       "      <td>167</td>\n",
-       "      <td>126</td>\n",
-       "      <td>23</td>\n",
+       "      <td>#a77e17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>cante alentejano</td>\n",
-       "      <td>#399c5d</td>\n",
        "      <td>615</td>\n",
        "      <td>1881</td>\n",
-       "      <td>57</td>\n",
-       "      <td>156</td>\n",
-       "      <td>93</td>\n",
+       "      <td>#399c5d</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        genre hex_colour     x      y    r    g    b\n",
-       "0  australian classical piano    #1ca3c2   502    615   28  163  194\n",
-       "1                 piano blues    #66882d   911   3891  102  136   45\n",
-       "2       histoire pour enfants    #568608  1153   5673   86  134    8\n",
-       "3               dalarna indie    #a77e17   401  10634  167  126   23\n",
-       "4            cante alentejano    #399c5d   615   1881   57  156   93"
+       "                        genre     x      y hex_colour\n",
+       "0  australian classical piano   502    615    #1ca3c2\n",
+       "1                 piano blues   911   3891    #66882d\n",
+       "2       histoire pour enfants  1153   5673    #568608\n",
+       "3               dalarna indie   401  10634    #a77e17\n",
+       "4            cante alentejano   615   1881    #399c5d"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "0357bef8-2afd-4f7d-85ab-66d6d07ee68b",
    "metadata": {},
    "outputs": [],
@@ -556,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "24adad09-22a3-4043-beae-0cdf8d6930d8",
    "metadata": {},
    "outputs": [],
@@ -573,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "149d0d27-1e89-42e2-b507-d1a608fa0680",
    "metadata": {},
    "outputs": [],
@@ -593,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "b71b71f2-52eb-4c7d-a444-bc172f735d11",
    "metadata": {},
    "outputs": [],
@@ -613,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "ce673826-f8fe-4e3d-ae2c-5f58526a31dc",
    "metadata": {},
    "outputs": [
